--- a/src/app/Components/register-form/register-form.component.html
+++ b/src/app/Components/register-form/register-form.component.html
@@ -27,7 +27,16 @@
                         <input [formControl]="repeatPasswordControl" class="form-control" type="password" name="repeatPassword" id="repeatPassword">
                         <app-validators-errors [control]="repeatPasswordControl"></app-validators-errors>
                         
-                        <button class="btn btn-primary">Send</button>
+                        <div class="form-check">
+                            <input [formControl]="checkControl" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <small  class="form-check-label" for="flexCheckDefault">
+                                I accept terms and conditions
+                            </small>
+                            <app-validators-errors [control]="checkControl"></app-validators-errors>
+                            
+                        </div>
+
+                        <div class="d-flex justify-content-center"><button [disabled]="registerForm.invalid" class="btn btn-primary" type="submit">Send</button></div>
                     </div>                    
 
                 </form>
