--- a/src/app/Components/toolbar/toolbar.component.html
+++ b/src/app/Components/toolbar/toolbar.component.html
@@ -1,1 +1,17 @@
-<p>toolbar works!</p>
+<nav class="navbar">
+    <div class="container">
+      <a class="navbar-brand">LOGO</a>
+
+        <div class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </div>
+        <div class="d-flex">
+            <a class="nav-link active" aria-current="page" href="#">Log In</a>
+            <p>|</p>
+            <a class="nav-link active" aria-current="page" href="#">Register</a>
+        </div>
+
+
+    </div>
+</nav>
