--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -1,1 +1,8 @@
-<p>menu works!</p>
+
+<nav class="nav flex-column">
+    <a class="nav-link" href="#">Language</a>
+    <a class="nav-link" href="#">Science</a>
+    <a class="nav-link" href="#">Math</a>
+    <a class="nav-link" href="#">English</a>
+    <a class="nav-link" href="#">History</a>
+</nav>
