--- a/src/app/Components/register-form/register-form.component.html
+++ b/src/app/Components/register-form/register-form.component.html
@@ -35,8 +35,7 @@
                             <app-validators-errors [control]="checkControl"></app-validators-errors>
                             
                         </div>
-
-                        <div class="d-flex justify-content-center"><button [disabled]="registerForm.invalid" class="btn btn-primary" type="submit">Send</button></div>
+                        <div class="d-flex justify-content-center"><button [disabled]="registerForm.invalid" mat-raised-button color="accent" type="submit">Send</button></div>
                     </div>                    
 
                 </form>
