--- a/src/app/Components/toolbar/toolbar.component.css
+++ b/src/app/Components/toolbar/toolbar.component.css
@@ -1,7 +1,11 @@
-.navbar{
+div{
     background-color: #bfedbe;
-    height: 100px;
+    height: 100%;
 }
-a, p{
-    margin-right: 10px;
+
+h1{
+    font-size: 50px;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    padding: 50px 0;
 }
