--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-toolbar></app-toolbar>
+<body>
+    <app-toolbar class="toolbar"></app-toolbar>
+    <app-menu class="menu"></app-menu>
+    <app-section class="section"></app-section>
+</body>
 
-<app-register-form></app-register-form>
+
