--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <body>
     <app-toolbar class="toolbar"></app-toolbar>
     <app-menu class="menu"></app-menu>
-    <app-section class="section"></app-section>
+    <app-section class="section">
+        <app-students-page></app-students-page>
+    </app-section>
 </body>
 
 
