--- a/src/app/Components/students-page/students-page.component.html
+++ b/src/app/Components/students-page/students-page.component.html
@@ -1,1 +1,46 @@
-<p>students-page works!</p>
+<div>
+    <table mat-table [dataSource]="students">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+    
+        <!-- First Name Column -->
+        <ng-container matColumnDef="firstname">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+        </ng-container>
+    
+        <!-- Second Name Column -->
+        <ng-container matColumnDef="secondname">
+        <th mat-header-cell *matHeaderCellDef> Second Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.secondname}} </td>
+        </ng-container>
+
+        <!-- Edit Column -->
+        <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> Edit </th>
+        <td mat-cell *matCellDef="let element"> 
+            <button mat-icon-button>
+                <mat-icon>edit</mat-icon>
+            </button>
+        </td>
+        </ng-container>
+
+        <!-- Delete  Column -->
+        <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>Delete </th>
+        <td mat-cell *matCellDef="let element">
+            <button mat-icon-button>
+                <mat-icon>delete</mat-icon>
+            </button>
+        </td>
+        </ng-container>
+        
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+</div>
