--- a/src/app/Components/toolbar/toolbar.component.css
+++ b/src/app/Components/toolbar/toolbar.component.css
@@ -1,5 +1,5 @@
 div{
-    background-color: #bfedbe;
+    background-color: #84df71;
     height: 100%;
 }
 
@@ -8,4 +8,5 @@ h1{
     text-align: center;
     font-family: 'Poppins', sans-serif;
     padding: 50px 0;
+
 }
