--- a/src/app/Components/students-page/students-page.component.html
+++ b/src/app/Components/students-page/students-page.component.html
@@ -1,4 +1,8 @@
+
+    <button (click)="addStudent()" class="add" mat-flat-button >ADD STUDENT</button>
+
 <div>
+
     <table mat-table [dataSource]="students">
 
         <!-- Position Column -->
@@ -9,21 +13,21 @@
     
         <!-- First Name Column -->
         <ng-container matColumnDef="firstname">
-        <th mat-header-cell *matHeaderCellDef> First Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+        <th mat-header-cell *matHeaderCellDef> FIRST NAME </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
         </ng-container>
     
-        <!-- Second Name Column -->
-        <ng-container matColumnDef="secondname">
-        <th mat-header-cell *matHeaderCellDef> Second Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.secondname}} </td>
+        <!-- Last Name Column -->
+        <ng-container matColumnDef="lastname">
+        <th mat-header-cell *matHeaderCellDef> LAST NAME </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
         </ng-container>
 
         <!-- Edit Column -->
         <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef> Edit </th>
+        <th mat-header-cell *matHeaderCellDef> EDIT </th>
         <td mat-cell *matCellDef="let element"> 
-            <button mat-icon-button>
+            <button mat-icon-button (click)="editStudent(element)">
                 <mat-icon>edit</mat-icon>
             </button>
         </td>
@@ -31,9 +35,9 @@
 
         <!-- Delete  Column -->
         <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef>Delete </th>
+        <th mat-header-cell *matHeaderCellDef>DELETE </th>
         <td mat-cell *matCellDef="let element">
-            <button mat-icon-button>
+            <button  mat-icon-button color="warn" (click)="removeStudent(element)">
                 <mat-icon>delete</mat-icon>
             </button>
         </td>
